css: fix style for iframes
Fix the display of iframes, which should be left-aligned,
not centered.

--- a/static/css/local.css
+++ b/static/css/local.css
@@ -347,3 +347,7 @@ code {
 h1 code, h2 code, h3 code, h4 code {
   background-color: inherit;
 }
+
+iframe {
+  margin-left: 0;
+}
